<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/pwd"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <TextView
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/user_info_update_user_psw_old_psw"/>
        <EditText
            android:paddingLeft="5dp"
            android:background="@drawable/chat_put_in"
            android:id="@+id/lastpwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
           />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <TextView
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/user_info_update_user_psw_new_psw"/>
        <EditText
            android:paddingLeft="5dp"
            android:id="@+id/newpwd"
            android:background="@drawable/chat_put_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
         />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <TextView
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/user_info_update_user_psw_repeat_new_psw"/>
        <EditText
            android:paddingLeft="5dp"
            android:background="@drawable/chat_put_in"
            android:id="@+id/morepwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/no"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/general_cancel"/>
        <Button
            android:id="@+id/ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/general_ok"/>
    </LinearLayout>
</LinearLayout>