<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/dashed_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/text_witheShadow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/bound3_step1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/m00_font_size_30pt" />
            </LinearLayout>


            <ImageView
                android:id="@+id/middleIV"
                android:layout_width="271dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="@mipmap/bund3ed_step1" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:text="@string/bound_step_text1"
                    android:textColor="@color/black" />

                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/bound_step_text2"
                    android:textColor="@color/black" />

                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/bound_step_text3"
                    android:textColor="@color/black" />

                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/bound_step_text4"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/next"
                style="@style/common_orange_button_style"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/general_next"
                android:textColor="@color/white"
                android:textSize="@dimen/m00_font_size_28pt"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>