<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashed_bg"
    android:orientation="vertical" >


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bound_pick_up"
                android:textColor="@color/m00_text_black_333333_color"
                android:textSize="24sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:src="@mipmap/bound_step_one_watch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|bottom"
                    android:layout_marginLeft="15dp"
                    android:drawablePadding="3dp"
                    android:drawableTop="@mipmap/bound_step_one_switch"
                    android:gravity="center"
                    android:text="@string/bound_active_notice"
                    android:textColor="@color/orangered"
                    android:textSize="20sp" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bound_active_notice2"
                android:textColor="@color/m00_text_black_333333_color"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/next"
        style="@style/common_orange_button_style"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/general_next"
        android:textColor="@color/white"
        android:textSize="@dimen/m00_font_size_28pt"
        android:textStyle="bold" />

</RelativeLayout>