<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashed_bg"
    android:orientation="vertical" >


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bound_active"
                android:textColor="@color/m00_text_black_333333_color"
                android:textSize="24sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="0dp" >

                <ImageView
                    android:id="@+id/bound_step_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="left|center"
                    android:padding="0dp"
                    android:src="@mipmap/bound_step_two_hand"
                    />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center|right"
                    android:padding="0dp"
                    android:src="@mipmap/bound_step_two_watch" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/bound_active_notice3"
                android:textColor="@color/m00_text_black_333333_color"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bound_active_notice4"
                    android:textColor="@color/m00_text_black_333333_color"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bound_string"
                    android:textColor="@color/orangered"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/scan"
                style="@style/common_orange_button_style"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/general_next"
                android:textColor="@color/white"
                android:textSize="@dimen/m00_font_size_28pt"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>